# textflow

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  tokens_by_pos.csv
Examples/: AnalyzeADataframe.ipynb  Example copy.ipynb  Example.ipynb  df_trans_merged_textflow.csv  df_with_textflow_analysis.csv  prueba.csv  validation.csv
Examples/ExampleDirectory/: Documento sin título copy.txt  Documento sin título.txt
tests/: test_sequence.py  test_textflow.py
tests/data/: doc_1.txt  doc_2.txt  doc_3.txt
textflow/: Analyzer.py  BDLASEAnalyzer.py  ComplexityAnalyzer.py  Crea-5000.txt  EmofinderAnalyzer.py  EmojiAnalyzer.py  EmojiPolarityAnalyzer.py  EmoticonsPolarityAnalyzer.py  EmotionAnalyzer.py  Inference.py  IronityAnalyzer.py  IronyAnalyzer.py  IsalAnalyzer.py  LemmaAnalyzer.py  LexicalDiversityAnalyzer.py  LiwcAnalyzer.py  NERAnalyzer.py  NGramsAnalyzer.py  NcrAnalyzer.py  POSAnalyzer.py  PerplexityAnalyzer.py  PolarityAnalyzer.py  SelAnalyzer.py  Sequence.py  SequenceDirectory.py  SequenceFile.py  SequenceString.py  SequenceToken.py  StylometryAnalyzer.py  Test.py  TextEmojiPolarityAnalyzer.py  Visualization.py  VolumetryAnalyzer.py  emofinder_norm.csv  isal_norm.csv  liwc_norm.csv  ncr_norm.csv  normalized_BDLASE.csv  sel_norm.csv
textflow/emojis/: emojiPositive.txt
textflow/emoti-sp/: emojiTextPositive.txt  emoticonsNegative.txt
textflow/emoticons/: emojiNegative.txt
