[tool.poetry]
name = "textflow"
version = "0.1.0"
description = "A text analysis library for Python"
authors = ["Jaime Collado <jcollado@ujaen.es>", "Estrella Vallecillo <mevr0003@red.ujaen.es>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.7"
spacy = "^3.3.0"
transformers = "^4.19.0"
torch = {version = "^1.11.0", python = "^3.7", platform = "linux"}
lexical-diversity = "^0.1.1"
emoji = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
